--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/postprocessing": "^3.0.4",
     "@types/three": "^0.182.0",
     "framer-motion": "^12.29.0",
+    "gsap": "^3.14.2",
     "postprocessing": "^6.38.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
